# spawned

./: .gitignore  README.md  VERSION  __init__.py  __main__.py  setup.cfg  setup.py
.github/scripts/: python-publish.py
.github/workflows/: python-publish.yml
spawned/: VERSION  __init__.py  __main__.py  chroot.py  exception.py  logger.py  spawned.py
src/: logger.py
