[metadata]
name = spawned
version = file: spawned/VERSION
url = https://github.com/remico/spawned
project_urls =
    Source = https://github.com/remico/spawned
author = Roman Gladyshev
author_email = remicollab@gmail.com
maintainer = Roman Gladyshev
maintainer_email = remicollab@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Shells
license = LGPLv3+
license_file = LICENSE
description = A simple python module for working with sub-processes
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    subprocess
    linux
platforms = ['POSIX']

[options]
packages = find:
package_dir =
#    = src
exclude =
    sndbx
    test
    tests
python_requires = >=3.8

[options.package_data]
* = VERSION

[options.packages.find]
# where = src

[options.entry_points]
console_scripts =
    spawned = spawned.__main__:main
